<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:text="@string/inputName" android:layout_width="match_parent" android:gravity="center" android:layout_height="wrap_content" android:textColor="@color/inputTitle"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView2" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/inputText" android:layout_weight="0.03" android:textColor="@color/inputTEXT"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editText1" android:inputType="textPersonName">
        <requestFocus></requestFocus>
    </EditText>
    <Button android:id="@+id/button1" android:layout_height="wrap_content" android:text="@string/complete" android:layout_width="wrap_content"></Button>
    
</LinearLayout>
