<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="165dp"
            android:layout_height="35dp"
            android:layout_x="100dp"
            android:layout_y="60dp"
            android:text="@string/setstate"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/showSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_x="160dp"
                android:layout_y="20dp"
                android:src="@drawable/audio_on" >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="165dp"
            android:layout_height="35dp"
            android:layout_x="100dp"
            android:layout_y="60dp"
            android:text="@string/setsound"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp" >

            <ImageView
                android:id="@+id/soundOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_x="90dp"
                android:layout_y="110dp"
                android:src="@drawable/on" >
            </ImageView>

            <ImageView
                android:id="@+id/sonudoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_x="200dp"
                android:layout_y="110dp"
                android:src="@drawable/off" >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_x="100dp"
            android:layout_y="160dp"
            android:text="@string/setvolume"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp" >

            <ImageView
                android:id="@+id/sounddown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_x="96dp"
                android:layout_y="220dp"
                android:src="@drawable/down" >
            </ImageView>

            <ImageView
                android:id="@+id/soundup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_x="200dp"
                android:layout_y="220dp"
                android:src="@drawable/up" >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_x="100dp"
            android:layout_y="160dp"
            android:text="@string/setshow"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <SeekBar
            android:id="@+id/volumebar"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_x="80dp"
            android:layout_y="280dp" >
        </SeekBar>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="80dp" >

        <Button
            android:id="@+id/resetbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="90dp"
            android:layout_y="350dp"
            android:text="@string/resetbutton"
            android:textColor="#000000" 
            android:background="#d9bf22"
            android:textSize="20dp"
            >
        </Button>

        <Button
            android:id="@+id/returnBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_x="124dp"
            android:layout_y="423dp"
            android:text="@string/setback"
            android:textColor="#000000"
            android:layout_marginLeft="20dp" 
            android:background="#d9bf22"
            android:textSize="20dp"
            >
        </Button>
    </LinearLayout>

</LinearLayout>